<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>me.nakilex</groupId>
    <artifactId>levelplugin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>levelplugin</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Force stable versions for transitive deps -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.triumphteam</groupId>
                <artifactId>triumph-gui</artifactId>
                <version>3.1.13</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <!-- Paper -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <!-- Lumine (hosts ModelEngine + lots of MC plugin artifacts) -->
        <repository>
            <id>lumine</id>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>

        <!-- Triumph (only if something wants it transitively) -->
        <repository>
            <id>triumph-releases</id>
            <url>https://repo.triumphteam.dev/releases</url>
        </repository>

        <!-- EngineHub (FAWE / WorldEdit) -->
        <repository>
            <id>enginehub</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <!-- Citizens -->
        <repository>
            <id>citizensnpcs</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>

        <!-- Nexo -->
        <repository>
            <id>nexo</id>
            <url>https://repo.nexomc.com/releases</url>
        </repository>

        <!-- ProtocolLib repo (not strictly required if Central works, but fine to keep) -->
        <repository>
            <id>dmulloy2</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

        <!-- MD-5 (bungeecord chat) -->
        <repository>
            <id>md-5</id>
            <url>https://repo.md-5.net/content/repositories/releases/</url>
        </repository>
        <!-- PacketEvents -->
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- ProtocolLib (modern coordinates) -->
        <dependency>
            <groupId>net.dmulloy2</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.4.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.10.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- ModelEngine API (THIS fixes your current compile errors) -->
        <dependency>
            <groupId>com.ticxo.modelengine</groupId>
            <artifactId>ModelEngine</artifactId>
            <version>R4.0.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- FastAsyncWorldEdit -->
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <version>2.9.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- Citizens -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.35-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Nexo -->
        <dependency>
            <groupId>com.nexomc</groupId>
            <artifactId>nexo</artifactId>
            <version>1.17.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- Adventure legacy serializer -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.17.0</version>
        </dependency>

        <!-- Bungee Chat (needed to compile Paper API due to deprecated BaseComponent refs) -->
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-chat</artifactId>
            <version>1.21-R0.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- Utilities -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.2.1-jre</version>
        </dependency>

        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.5.13</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>levelplugin</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.yml</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
